--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="resize_btn">Resize btn</string>
     <string name="_0_00">0:00</string>
     <string name="_info_sec">%1$s %2$s</string>
+    <string name="crop">CROP</string>
+    <string name="stretch">STRETCH</string>
+    <string name="best_fit">BEST FIT</string>
 </resources>
